@@ -13,16 +13,6 @@ CGUIDialogButtonMenu::CGUIDialogButtonMenu(void)
 CGUIDialogButtonMenu::~CGUIDialogButtonMenu(void)
 {}
 
-bool CGUIDialogButtonMenu::OnAction(const CAction &action)
-{
-  if (action.wID == ACTION_CLOSE_DIALOG || action.wID == ACTION_PREVIOUS_MENU)
-  {
-    Close();
-    return true;
-  }
-  return CGUIDialog::OnAction(action);
-}
-
 bool CGUIDialogButtonMenu::OnMessage(CGUIMessage &message)
 {
   bool bRet = CGUIDialog::OnMessage(message);
