@@ -38,17 +38,6 @@ CGUIDialogSelect::CGUIDialogSelect(void)
 CGUIDialogSelect::~CGUIDialogSelect(void)
 {}
 
-
-bool CGUIDialogSelect::OnAction(const CAction &action)
-{
-  if (action.wID == ACTION_CLOSE_DIALOG || action.wID == ACTION_PREVIOUS_MENU)
-  {
-    Close();
-    return true;
-  }
-  return CGUIDialog::OnAction(action);
-}
-
 bool CGUIDialogSelect::OnMessage(CGUIMessage& message)
 {
   switch ( message.GetMessage() )
